<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_description"
        android:title="@string/th_m_m_t" />
    <item
        android:id="@+id/add_to_album"
        android:title="@string/th_m_v_o_album" />
    <item
        android:id="@+id/secure_image"
        android:title="@string/n_nh_v_b_o_m_t" />
    <item
        android:id="@+id/main_screen"
        android:title="Đặt làm màn hình chính" />
    <item
        android:id="@+id/lock_screen"
        android:title="Đặt làm màn hình khóa" />
    <!-- Mục Xóa đã chuyển thành nút riêng, nhưng có thể giữ lại ở đây nếu muốn -->
    <!-- <item
        android:id="@+id/delete_image_menu"
        android:title="@string/x_a_nh"/> -->
    <item
        android:id="@+id/details"
        android:title="@string/chi_ti_t_nh" />
</menu>